<resources>
    <string name="app_name">BlindViews</string>
    <string name="hello_moon">Hello Moon!</string>
    <string name="add_elements">Add some elements</string>
    <string name="calculators">Show calculators</string>
    <string name="rainbow">7 Colors of the Rainbow: RED, ORANGE, YELLOW,  GREEN, BLUE, INDIGO, VIOLET.
You can open calculator with: FrameLayout , LinearLayout, RelativeLayout, ConstraintLayout.
    </string>
    <string name="percent">%</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="result">=</string>
    <string name="add">+</string>
    <string name="subst">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="backspase"><![CDATA[< x]]]></string>
    <string name="clear">C</string>
</resources>
