<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:gravity="bottom|end"
        android:hint="@string/zero"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/percent_textView"
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:layout_below="@+id/one_textView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:gravity="center"
        android:text="@string/percent" />

    <TextView
        android:id="@+id/zero_textView"
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:layout_below="@+id/two_textView"
        android:layout_margin="3dp"
        android:layout_marginStart="7dp"
        android:layout_toEndOf="@+id/percent_textView"
        android:gravity="center"
        android:text="@string/zero" />

    <TextView
        android:id="@+id/dot_textView"
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:layout_below="@+id/three_textView"
        android:layout_margin="3dp"
        android:layout_toEndOf="@+id/zero_textView"
        android:gravity="center"
        android:text="@string/dot" />

    <TextView
        android:id="@+id/two_textView"
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:layout_below="@+id/five_textView"
        android:layout_margin="3dp"
        android:layout_toEndOf="@+id/one_textView"
        android:gravity="center"
        android:text="@string/two" />

    <TextView
        android:id="@+id/three_textView"
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:layout_below="@+id/six_textView"
        android:layout_margin="3dp"
        android:layout_toEndOf="@+id/two_textView"
        android:gravity="center"
        android:text="@string/three" />

    <TextView
        android:id="@+id/result_textView"
        android:layout_width="85dp"
        android:layout_height="156dp"
        android:layout_below="@+id/add_textView"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:layout_toEndOf="@+id/three_textView"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/result"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/one_textView"
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:layout_below="@+id/four_textView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:gravity="center"
        android:text="@string/one" />

    <TextView
        android:id="@+id/six_textView"
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:layout_below="@+id/nine_textView"
        android:layout_margin="3dp"
        android:layout_toEndOf="@+id/five_textView"
        android:gravity="center"
        android:text="@string/six" />

    <TextView
        android:id="@+id/add_textView"
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:layout_below="@+id/subst_textView"
        android:layout_margin="3dp"
        android:layout_toEndOf="@+id/six_textView"
        android:gravity="center"
        android:text="@string/add" />

    <TextView
        android:id="@+id/clear_textView"
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:layout_below="@id/editText3"
        android:layout_alignParentStart="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:gravity="center"
        android:text="@string/clear"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/backspace_textView"
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:layout_below="@id/editText3"
        android:layout_margin="3dp"
        android:layout_toEndOf="@+id/clear_textView"
        android:gravity="center"
        android:text="@string/backspase" />

    <TextView
        android:id="@+id/divide_textView"
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:layout_below="@id/editText3"
        android:layout_margin="3dp"
        android:layout_toEndOf="@+id/backspace_textView"
        android:gravity="center"
        android:text="@string/divide" />

    <TextView
        android:id="@+id/multiply_textView"
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:layout_below="@id/editText3"
        android:layout_margin="3dp"
        android:layout_toEndOf="@+id/divide_textView"
        android:gravity="center"
        android:text="@string/multiply" />

    <TextView
        android:id="@+id/seven_textView"
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:layout_below="@+id/clear_textView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:gravity="center"
        android:text="@string/seven" />

    <TextView
        android:id="@+id/eight_textView"
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:layout_below="@+id/backspace_textView"
        android:layout_margin="3dp"
        android:layout_toEndOf="@+id/seven_textView"
        android:gravity="center"
        android:text="@string/eight" />

    <TextView
        android:id="@+id/nine_textView"
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:layout_below="@+id/divide_textView"
        android:layout_margin="3dp"
        android:layout_toEndOf="@+id/eight_textView"
        android:gravity="center"
        android:text="@string/nine" />

    <TextView
        android:id="@+id/subst_textView"
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:layout_below="@+id/multiply_textView"
        android:layout_margin="3dp"
        android:layout_toEndOf="@+id/nine_textView"
        android:gravity="center"
        android:text="@string/subst" />

    <TextView
        android:id="@+id/four_textView"
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:layout_below="@+id/seven_textView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:gravity="center"
        android:text="@string/four" />

    <TextView
        android:id="@+id/five_textView"
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:layout_below="@+id/eight_textView"
        android:layout_margin="3dp"
        android:layout_toEndOf="@+id/four_textView"
        android:gravity="center"
        android:text="@string/five" />


</RelativeLayout>