<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="80"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:gravity="bottom|end"
        android:hint="@string/zero"
        android:inputType="number"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/clear_textView"
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/clear"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/seven_textView"
        app:layout_constraintEnd_toStartOf="@+id/backspace_textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <TextView
        android:id="@+id/backspace_textView"
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/backspase"
        app:layout_constraintBottom_toTopOf="@+id/eight_textView"
        app:layout_constraintEnd_toStartOf="@+id/divide_textView"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <TextView
        android:id="@+id/divide_textView"
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/divide"
        app:layout_constraintBottom_toTopOf="@+id/nine_textView"
        app:layout_constraintEnd_toStartOf="@+id/multiply_textView"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <TextView
        android:id="@+id/multiply_textView"
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/multiply"
        app:layout_constraintBottom_toTopOf="@+id/subst_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <TextView
        android:id="@+id/seven_textView"
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/seven"
        app:layout_constraintBottom_toTopOf="@+id/four_textView"
        app:layout_constraintEnd_toStartOf="@+id/eight_textView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/eight_textView"
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/eight"
        app:layout_constraintBottom_toTopOf="@+id/five_textView"
        app:layout_constraintEnd_toStartOf="@+id/nine_textView" />

    <TextView
        android:id="@+id/nine_textView"
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/nine"
        app:layout_constraintBottom_toTopOf="@+id/six_textView"
        app:layout_constraintEnd_toStartOf="@+id/subst_textView" />

    <TextView
        android:id="@+id/subst_textView"
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/subst"
        app:layout_constraintBottom_toTopOf="@+id/add_textView"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/four_textView"
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/four"
        app:layout_constraintBottom_toTopOf="@+id/one_textView"
        app:layout_constraintEnd_toStartOf="@+id/five_textView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/five_textView"
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/five"
        app:layout_constraintBottom_toTopOf="@+id/two_textView"
        app:layout_constraintEnd_toStartOf="@+id/six_textView" />

    <TextView
        android:id="@+id/six_textView"
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/six"
        app:layout_constraintBottom_toTopOf="@+id/three_textView"
        app:layout_constraintEnd_toStartOf="@+id/add_textView" />

    <TextView
        android:id="@+id/add_textView"
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/add"
        app:layout_constraintBottom_toTopOf="@+id/result_textView"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/one_textView"
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/one"
        app:layout_constraintBottom_toTopOf="@+id/percent_textView"
        app:layout_constraintEnd_toStartOf="@+id/two_textView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/two_textView"
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/two"
        app:layout_constraintBottom_toTopOf="@+id/zero_textView"
        app:layout_constraintEnd_toStartOf="@+id/three_textView" />

    <TextView
        android:id="@+id/three_textView"
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/three"
        app:layout_constraintBottom_toTopOf="@+id/dot_textView"
        app:layout_constraintEnd_toStartOf="@+id/result_textView" />

    <TextView
        android:id="@+id/result_textView"
        android:layout_width="85dp"
        android:layout_height="158dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/result"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/percent_textView"
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/percent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/zero_textView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/zero_textView"
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/zero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dot_textView" />

    <TextView
        android:id="@+id/dot_textView"
        android:layout_width="85dp"
        android:layout_height="75dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/dot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/result_textView" />

</android.support.constraint.ConstraintLayout>